fix style: spinner was off-center

--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -13,8 +13,7 @@
   gap: 15px;
 }
 
-.shop-loading-overlay {
-  width: calc(100% + 250px);  
+.shop-loading-overlay { 
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   display: flex;
